Fix mobile font and root cause of mobile bottom whitespace

--- a/styles.css
+++ b/styles.css
@@ -47,13 +47,15 @@ html, body {
     max-width: 100vw;
     width: 100%;
     overflow-x: hidden;
-    height: 100%; /* Forcibly prevent HTML height from stretching infinitely */
+}
+html {
+    background-color: var(--col-black); /* Prevents white rubber-banding at bottom */
 }
 
 body {
     position: relative;
     height: auto;
-    min-height: 100%;
+    min-height: 100vh;
     font-family: var(--font-body);
     background-color: var(--col-bg);
     color: var(--col-black);
@@ -948,6 +950,7 @@ textarea:focus {
         transform: translateY(-25%); /* Perfect centering behind the title */
     }
     .form-container h2 {
+        font-family: var(--font-super-heavy);
         font-size: 36px;
     }
     .form-container p {
